--- a/Base64 to PDF Decoder/Base64 to PDF Decoder.csproj
+++ b/Base64 to PDF Decoder/Base64 to PDF Decoder.csproj
@@ -8,4 +8,8 @@
     <ApplicationIcon>image.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
